[package]
name = "day-11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"
grid = "0.12"
itertools = "0.12"
rounded-div = "0.1"
