[package]
name = "day-17"
version = "0.1.0"
authors = ["Mats Liljegren <liljegren.mats@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
log = "0.4.22"
num = "0.4.3"
pathfinding = "4.11.0"
rust-tools = { path="../../rust-tools" }
scan_fmt = "0.2.6"
text_io = "0.1.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
